The back is, now on, sending the token at response, so the fornt could store it
